@@ -370,7 +370,7 @@ namespace Castle.ActiveRecord.Framework.Internal
 		{
 			String cascade = TranslateCascadeEnum(model.OneToOneAtt.Cascade);
 
-			AppendF("<one-to-one {0} {1} {2} />", 
+			AppendF("<one-to-one {0} {1} {2} {3} {4} {5}/>", 
 				MakeAtt("name", model.Property.Name),
 				MakeAtt("access", model.OneToOneAtt.AccessString),
 				MakeAtt("class", MakeTypeName(model.Property.PropertyType)), 
