@@ -2,6 +2,8 @@
 beta 3
 ======
 
+- Fixed: Support for multiple databases was completely broken.
+
 - An implementation of ISessionFactoryHolder can be specified through the configuration, attribute sessionfactoryholdertype
   on the config node.
 
